--- a/styles/main.css
+++ b/styles/main.css
@@ -4,19 +4,39 @@ body {
 }
 
 #container {
-  background-color: #ffffff;
-  background-size: 4em 4em;
-  height: 100vh;
-  position: relative;
-  left: 10%;
-  top: 100px;
+  position: relative; /* De container moet 'relative' zijn om absolute positie van kind-elementen mogelijk te maken */
+  height: 100vh; /* Zorg ervoor dat de container de volledige hoogte van het scherm heeft */
+}
+
+#imageWrapper {
+  position: relative; /* De container moet 'relative' zijn om absolute positie van kind-elementen mogelijk te maken */
+  height: 100vh; /* Zorg ervoor dat de container de volledige hoogte van het scherm heeft */
+}
+
+#background {
+  position: absolute; /* Achtergrond wordt absoluut gepositioneerd binnen de container */
+  top: 0;
+  left: 0;
+  height: 100%; /* !!!!!!!!!!!!!!!!!!!! Ga checken voor responsiveness, en houdt het scherm in het midden als het kan. */
+  z-index: 0; /* De achtergrond staat onder de andere afbeeldingen */
 }
 
 #mijnAfbeelding {
   width: 100px;
   height: 100px;
-  background-color: #afda9f;
   border-radius: 5px;
   cursor: pointer;
+  position: absolute; /* Absoluut gepositioneerd binnen de container */
+  top: 200px;
+  z-index: 2; /* Zorg ervoor dat deze boven de achtergrondafbeelding komt */
+}
+
+#mijnAfbeelding2 {
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
   position: absolute;
+  top: 200px; /* Positie voor tweede afbeelding (bijvoorbeeld) */
+  left: 200px; /* Positie voor tweede afbeelding (bijvoorbeeld) */
+  z-index: 1; /* Zorg ervoor dat deze boven de eerste afbeelding komt */
 }
