--- a/styles/button.css
+++ b/styles/button.css
@@ -1,9 +1,31 @@
-.button {
-  width: 80px;
-  background-color: blue;
+#passwordgendiv {
+  position: absolute;
+  top: 86%;
+  left: 53%;
+  height: 4%;
+  transform: translateX(-50%);
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 1vw; /* Dynamische tekstgrootte op basis van de breedte van het scherm */
+
+  /* Flexbox instellingen voor verticaal en horizontaal centreren */
+  display: flex;
+  align-items: center; /* Verticaal centreren */
+  justify-content: center; /* Horizontaal centreren */
+}
+
+#imageWrapper button {
+  position: absolute;
+  top: 73%;
+  left: 53%;
+  transform: translateX(-50%);
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border: none;
+  padding: 10px 20px;
   border-radius: 5px;
-  cursor: pointer;
-  position: absolute; /* Absoluut gepositioneerd binnen de container */
-  top: 200;
-  z-index: 3; /* Zorg ervoor dat deze boven de achtergrondafbeelding komt */
+  font-size: 1vw; /* Dynamische tekstgrootte op basis van de breedte van het scherm */
 }
