--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@
 @import url("button.css");
 @import url("titel.css");
 @import url("inputveld.css");
+@import url("categoriën.css");
 
 body {
   padding: 0;
