--- a/styles/button.css
+++ b/styles/button.css
@@ -11,6 +11,7 @@
   padding: 10px 20px;
   border-radius: 5px;
   font-size: 24px;
+  font-family: "Lucida Handwriting", cursive;
 }
 
 /* Wachtwoord display */
@@ -21,13 +22,17 @@
   height: 4%;
   transform: translateX(-50%);
   z-index: 1;
-  background-color: rgba(118, 170, 118, 0.7);
+  background-color: rgba(235, 194, 231, 0.601);
   padding: 10px;
   border-radius: 10px;
   font-size: clamp(22px, 3vw, 26px);
+  font-family: "Lucida Console";
+  color: rgb(149, 36, 151);
 
   /* Flexbox instellingen voor verticaal en horizontaal centreren */
   display: flex;
   align-items: center; /* Verticaal centreren */
   justify-content: center; /* Horizontaal centreren */
+
+  /* Zorg ervoor dat de tekst binnen de div breekt als het te lang is */
 }
