--- a/styles/inputveld.css
+++ b/styles/inputveld.css
@@ -5,9 +5,9 @@
   transform: translateX(-50%);
   z-index: 2; /* Zorg ervoor dat de input boven de achtergrond komt */
   background-color: rgba(
-    204,
-    199,
-    141,
+    246,
+    214,
+    243,
     0.601
   ); /* Maak de achtergrond een beetje doorzichtig */
   padding: 10px;
@@ -16,10 +16,13 @@
 
 #inputWrapper label {
   font-size: clamp(20px, 2vw, 20px);
+  font-family: "Lucida Handwriting", cursive;
+  color: rgb(149, 36, 151);
 }
 
 #inputWrapper input {
   font-size: clamp(16px, 2vw, 20px);
   padding: 5px;
   border-radius: 5px;
+  border: rgb(91, 26, 117) 1px solid;
 }
