layout beetje verbeterd. sterkte-score toegevoegd

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
 @import url("titel.css");
 @import url("inputveld.css");
 @import url("categoriën.css");
+@import url("sterkte.css");
 
 body {
   padding: 0;
